fix for whitespace above footer

--- a/css/archive.css
+++ b/css/archive.css
@@ -415,7 +415,7 @@ footer p i {
 }
 @media screen and (max-width: 410px) {
     footer {
-        margin: 165px auto 0;
+        margin: 50px auto 0;
     }
 }
 @media screen and (max-width: 374px) {
