--- a/css/news.css
+++ b/css/news.css
@@ -403,7 +403,7 @@ footer p i {
 }
 @media screen and (max-width: 410px) {
     footer {
-        margin: 165px auto 0;
+        margin: 50px auto 0;
     }
 }
 @media screen and (max-width: 335px) {
