--- a/style.css
+++ b/style.css
@@ -887,7 +887,7 @@ footer p i {
 }
 @media screen and (max-width: 410px) {
     footer {
-        margin: 40px auto 0;
+        margin: 50px auto 0;
     }
 }
 @media screen and (max-width: 374px) {
